2005-10-26 20:50 Mike Park  <mike.park@nasa.gov>

	* src/unit_main.c (main) a --phase of -1 will test gridedger.
	the spacing is not appiled every status.

2005-10-26 17:05 Mike Park  <mike.park@nasa.gov>

	* src/gridedger.c (gridedgerDiscretizeEvenly) does iterations
	to adjust the desired length to balance edge errors.

2005-10-26 16:25 Mike Park  <mike.park@nasa.gov>

	* src/gridedger.c (gridedgerDiscretize) now computes target
	distribution.

2005-10-26 16:05 Mike Park  <mike.park@nasa.gov>

	* src/gridedger.c (gridedgerSegmentT,gridedgerSegmentMap) fixed
	read of freed memory, thanks valgrind!.
	* src/gridedger.c (gridedgerNodes) return number of nodes in
	discretization
	* src/gridedger.c (gridedgerNodeS) return s values of nodes in
	discretization
	* src/gridedger.c (gridedgerDiscretize) create a discretization
	based on constant length in metric.

2005-10-26 14:35 Mike Park  <mike.park@nasa.gov>

	* src/gridedger.c (gridedgerLengthBetween) to
	compute the length of an edge between to s values (needs test).
	* src/gridedger.c (gridedgerLengthToS) completed with binary
	search (Newton-Rapson would be better).

2005-10-26 13:20 Mike Park  <mike.park@nasa.gov>

	* src/gridedger.c (gridedgerDiscreteSegmentAndRatio) for DRY,
	extracted repeated code from gridedgerSegmentT and
	gridedgerSegmentMap to use in gridedgerLengthToS.

2005-10-23 21:29 Mike Park  <mike.park@nasa.gov>

	* src/gridedger.c (gridedgerLengthToS) started routine (blank,
	except for comments) that will give next s value for certain
	length edge.

2005-10-20 11:48 Mike Park  <mike.park@nasa.gov>

	* src/gridedger.c (gridedgerSegmentMap) map linearly interpolated
	from nodes in s.

2005-10-20 11:17 Mike Park  <mike.park@nasa.gov>

	* src/gridcad.c (gridNewGeometryEdgeSiteAllowedAt) if t is near an
	edge segment endpoint, test to see if the distance between the
	exsiting face node and the projected face node is larger than
	tolerence. (testing face areas would always fail, zero area).
